--- a/IslamicLecture/app/src/main/AndroidManifest.xml
+++ b/IslamicLecture/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mahmud.picosoft.islamiclecturecollection"
     android:versionCode="2"
-    android:versionName="2.0">
+    android:versionName="2.0.1">
 
     <uses-sdk
-        android:minSdkVersion="9"
+        android:minSdkVersion="15"
         android:targetSdkVersion="25" />
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -27,6 +27,7 @@
         <activity
             android:name="mahmud.picosoft.islamiclecturecollection.tabfragment.ForegroundActivity"
             android:label="@string/app_name"
+            android:configChanges="screenSize|keyboard|orientation"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,10 +49,10 @@
                 <data android:mimeType="image/*"></data>
             </intent-filter>
         </activity>
+
         <activity android:name="mahmud.picosoft.islamiclecturecollection.activity.LecturesList"
             android:theme="@style/AppThemeBase.NoActionBar"></activity>
-        <!-- android:alwaysRetainTaskState="true" -->
-        <!-- android:launchMode="singleInstance" -->
+
         <activity android:name=".activity.AboutActivity"
             android:theme="@style/AppThemeAbout.NoActionBar"
             android:parentActivityName=".tabfragment.ForegroundActivity">
